--- a/css/styles.css
+++ b/css/styles.css
@@ -220,8 +220,8 @@ h4 {
    width: 90%;
    text-align: center;
    position: relative;
-   height: 80%;
-   overflow-y: auto;
+   height: 100%;
+   overflow-y: visible;
    display: flex;
    flex-direction: column;
    gap: 2%;
