--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,7 @@ h4 {
 /* LOGIN/REGISTER SECTIONS  */
 
 
+
 #loginForm ,#registerForm { 
    display: flex;
    justify-content: center;
@@ -195,6 +196,7 @@ h4 {
    flex-direction: column;
    max-width: 700px;
    gap: 10px;
+   padding-bottom: 15px;
 
 }
 
@@ -205,7 +207,7 @@ aside {
 }
 
 /* Forms header */
-article h3 {
+legend {
    padding-top: 20px;
    padding-bottom: 4%;
    width: 100%;
@@ -305,3 +307,45 @@ input:focus {
    padding-left: 4px;
    color: #DAA520;
 }
+
+
+/* HINTS STYLING  */
+
+.hints {
+    padding-bottom: 1%;
+}
+
+
+
+
+.register-hints {
+    font-family: "Work Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    text-align: left;
+    width: 100%;
+    max-width: 263px;
+    margin: 0 auto; 
+    padding-left: 0.6rem; 
+    font-size: 0.6rem; 
+
+
+
+    opacity: 0; 
+    max-height: 0; 
+    overflow: hidden; 
+    transition: opacity 0.3s ease-out, max-height 0.3s ease-out; 
+    pointer-events: none; 
+}
+
+.register-hints.active-hints {
+    opacity: 1; 
+    max-height: 100px; 
+
+}
+
+
+
+
+
+
