starting with booking form
small fixed (links on pages) started doing booking form

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ h4 {
 
 
 
-#loginForm ,#registerForm { 
+#loginForm ,#registerForm ,#bookingForm { 
    display: flex;
    justify-content: center;
    padding: 2rem 0;
