--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@ h4 {
 
 
 
-/* LOGIN/REGISTER SECTIONS  */
+/* LOGIN/REGISTER/BOOKING SECTIONS  */
 
 
 
@@ -186,7 +186,7 @@ h4 {
 
 }
 
-.login-form,.register-form {
+.login-form,.register-form ,.booking-form{
    background: linear-gradient(to bottom, #f0f0f0, #d9d9d9);
    border-radius: 10px;
    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
@@ -200,6 +200,10 @@ h4 {
 
 }
 
+/* FIXING VIEW PROBLEM FOR LOGIN FORM */
+#loginForm {
+    padding-top: 6rem !important;
+}
 
 
 aside {
@@ -223,7 +227,7 @@ legend {
 }
 
 /* BUTTON  */
-.login-form .btn, .register-form .btn {
+.login-form .btn, .register-form .btn, .booking-form .btn {
    background: linear-gradient(to right, #DAA520, #FFD700);
    padding: 12px 25px;
    font-size: 1.6rem;
