--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ legend {
    color:#D97706;
 }
 
-/* BUTTON  */
+/* FORMS SUBMIT BUTTON  */
 .login-form .btn, .register-form .btn, .booking-form .btn {
    background: linear-gradient(to right, #DAA520, #FFD700);
    padding: 12px 25px;
@@ -252,6 +252,7 @@ legend {
 
 /* INPUTS  */
 
+
 input {
    width: 100%;
    height: 50px; 
@@ -267,6 +268,42 @@ input:focus {
    border-color: #DAA520;
    box-shadow: 0 4px 10px rgba(218, 165, 32, 0.2); 
 }
+
+
+
+/* NUMBER OF GUEST  */
+
+#numOfGuests::-webkit-inner-spin-button, 
+#numOfGuests::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+}
+#numOfGuests {
+    -moz-appearance: textfield;
+}
+#numOfGuests {
+    width: 3rem;
+}
+
+#minusBtn{
+    margin-right: 10px;
+}
+#plusBtn{
+    margin-left: 10px;
+}
+
+#minusBtn , #plusBtn {
+    cursor: pointer;
+    color: #000;
+    font-weight: 800;
+    width: 3em;
+    background: rgba(157, 160, 163, 0.379);
+    height: 2.8em;
+    border-radius: 9px;
+}
+
+
+
+
 
 /* FACEBOOK/GOOGLE */
 
@@ -291,6 +328,7 @@ input:focus {
    background: #DB4437;
    color: white;
 }
+
 
 /* PASSWORD SHOW  */
 
@@ -318,8 +356,6 @@ input:focus {
 .hints {
     padding-bottom: 1%;
 }
-
-
 
 
 .register-hints {
