--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ h1 {
         ;
     }
 
-    #MainPageContent {
+    main {
         width: 100%;
         display: flex;
         flex-direction: column;
