--- a/css/styles.css
+++ b/css/styles.css
@@ -682,8 +682,8 @@ tbody tr {
         padding: 8px;
     }
 
-    thead th,
-    thead td {
+    thead th
+        {
         padding: 8px 4px;
         font-size: 0.8em;
     }
