--- a/css/styles.css
+++ b/css/styles.css
@@ -231,6 +231,7 @@ figcaption {
 footer {
     background-color: #d4b378;
     margin-top: 15px;
+    padding-left: 5px;
 }
 
 .footer-img {
@@ -245,7 +246,7 @@ footer {
 }
 
 .socials {
-    padding-top: 0.4rem;
+    padding: 0.5rem 0;
     display: flex;
     justify-content: flex-start;
     gap: 20px;
